feat: added referral reason, condition, medical history to show referral
